error.log
file:///C:/Users/vishn/OneDrive/Desktop/bank/routes/userRoutes.js:3
import { allowRoles } from "../middleware/roleMiddleware.js";
         ^^^^^^^^^^
SyntaxError: The requested module '../middleware/roleMiddleware.js' does not provide an export named 'allowRoles'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.13.1
